Add reset button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="grid-box">o</div>
         <div class="grid-box">x</div>
     </div>
+    <button class="reset-button">Reset</button>
 </body>
 
 </html>
