Add tie if neither has won

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="winner-display">
+        hey
+    </div>
     <div class="container">
         <div class="grid-box">x</div>
         <div class="grid-box">o</div>
@@ -24,7 +27,10 @@
         <div class="grid-box">o</div>
         <div class="grid-box">x</div>
     </div>
-    <button class="reset-button">Reset</button>
+    <div>
+        <button class="reset-button">Reset</button>
+    </div>
+
 </body>
 
 </html>
