--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="./game.js" defer></script>
 </head>
 
 <body>
     <div class="winner-display">
-        hey
+
     </div>
     <div class="container">
         <div class="grid-box">x</div>
@@ -28,7 +31,7 @@
         <div class="grid-box">x</div>
     </div>
     <div>
-        <button class="reset-button">Reset</button>
+        <button class="reset-button">RESET</button>
     </div>
 
 </body>
